--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <script type='text/javascript' src='jquery.particleground.js'></script>
   <script type='text/javascript' src='demo.js'></script>
   <script href="vanilla-tilt.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
 </head>
 
 <body>
 
 <div id="particles">
   <div id="intro">
-    <h1 class="your-element" data-tilt="" data-tilt-reverse="true" data-tilt-scale="1.3">Shryans Goyal</h1>
+    <h1 class="your-element typ" data-tilt="" data-tilt-reverse="true" data-tilt-scale="1.3">Shryans Goyal</h1>
     <p>Thanks for coming! Connect with me:</p>
     <div class="btn"><a href="https://github.com/shryansg">Github</a></div>
     <div class="btn"><a href="https://www.facebook.com/TheShryans">Facebook</a></div>
@@ -30,6 +31,14 @@
     speed: 800
   });
 </script>
+<script>
+  $('.typ').typeIt({
+     strings: ["Hi! I'm Shryans", "I am an entrepreneur, developer and thinker.", "I love reading books!","I will soon launch a blog"],
+     speed: 50,
+     breakLines: false,
+     autoStart: false
+});
+  </script>
 
 </body>
 </html>
