--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   });
 </script>
 <script>
-  $('.typ').typeIt({
+  $('h1').typeIt({
      strings: ["Hi! I'm Shryans", "I am an entrepreneur, developer and thinker.", "I love reading books!","I will soon launch a blog"],
      speed: 50,
      breakLines: false,
