--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="particles">
   <div id="intro">
     <h1 class="your-element typ" data-tilt="" data-tilt-reverse="true" data-tilt-scale="1.3">Shryans Goyal</h1>
-    <p id="typ">Thanks for coming! Connect with me:</p>
+    <p id="typ"></p>
     <div class="btn"><a href="https://github.com/shryansg">Github</a></div>
     <div class="btn"><a href="https://www.facebook.com/TheShryans">Facebook</a></div>
     <div class="btn"><a href="https://www.linkedin.com/in/shryansg/"> LinkedIn</a></div>
