--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type='text/javascript' src='jquery.particleground.js'></script>
   <script type='text/javascript' src='demo.js'></script>
   <script href="vanilla-tilt.js"></script>
-  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
+  <script href="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
 </head>
 
 <body>
