--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="btn"><a href="https://www.facebook.com/TheShryans">Facebook</a></div>
     <div class="btn"><a href="https://www.linkedin.com/in/shryansg/"> LinkedIn</a></div>
     <div class="btn"><a href="mailto:shry4ns@rice.edu?Subject=Hey%20Shryans">Mail</a></div>
-    <div class="btn"><a href="Resume_latest.pdf">Resume</a></div>
+    <div class="btn"><a href="Rice University_Shryans_Goyal.pdf">Resume</a></div>
   </div>
 </div>
 <script type="text/javascript" src="vanilla-tilt.js"></script>
